--- a/index.html
+++ b/index.html
@@ -30,33 +30,35 @@
                     <i class="fa-solid fa-ellipsis"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Sobre</a>
+                            <a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Valores</a>
+                            <a class="nav-link" href="#calores">Valores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Soluções</a>
+                            <a class="nav-link" href="#solucoes">Soluções</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Equipe</a>
+                            <a class="nav-link" href="#equipe">Equipe</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Cases
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Segurança</a></li>
-                            <li><a class="dropdown-item" href="#">Diferencial</a></li>
-                            <li><a class="dropdown-item" href="#">Bases</a></li>
-                        </ul>
+                                aria-expanded="false">
+                                Cases
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Segurança</a></li>
+                                <hr class="dropdown-divider">
+                                <li><a class="dropdown-item" href="#">Diferencial</a></li>
+                                <hr class="dropdown-divider">
+                                <li><a class="dropdown-item" href="#">Bases</a></li>
+                            </ul>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contato</a>
                         </li>
-                    </li>
+                        </li>
                     </ul>
                 </div>
             </div>
