--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar bg-body-tertiary navbar-expand-lg">
+    <header class="container">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Company</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,9 +55,9 @@
                                 <hr class="dropdown-divider">
                                 <li><a class="dropdown-item" href="#">Bases</a></li>
                             </ul>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contato</a>
-                        </li>
                         </li>
                     </ul>
                 </div>
@@ -65,6 +65,22 @@
         </nav>
     </header>
 
+    <section class="container mt-5 sobre" id="sobre">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-6">
+                <h2 class="my-title display-5 my-4">
+                    Soluções para o crescimento da sua empresa.
+                </h2>
+                <h3 class="fw-light mb-4">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, quam.
+                </h3>
+                <a href="#" class="btn btn-primary btn-lg">Mais informações</a>
+            </div>
+            <div class="col-lg-6 text-center">
+                <img src="./assets/img/team-meeting-1-9.png" alt="team-meeting" class="img-fluid">
+            </div>
+        </div>
+    </section>
 
 
 
