--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 
 <body>
-    <header class="container">
+    <header class="container mt-3">
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Company</a>
+            <div class="container">
+                <a class="navbar-brand logo-text" href="#">Company</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
                 <a href="#" class="btn btn-primary btn-lg">Mais informações</a>
             </div>
             <div class="col-lg-6 text-center">
-                <img src="./assets/img/team-meeting-1-9.png" alt="team-meeting" class="img-fluid">
+                <img src="./assets/img/team-presentation-5-87.png" alt="team-presentation" class="img-fluid">
             </div>
         </div>
     </section>
