--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <header class="container mt-3">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand logo-text" href="#">Company</a>
+                <a class="navbar-brand logo-text" href="#">PROJETO WEB</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -32,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
+                            <a class="nav-link" href="#sobre">Sobre</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#calores">Valores</a>
@@ -43,19 +44,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#equipe">Equipe</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Cases
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Segurança</a></li>
-                                <hr class="dropdown-divider">
-                                <li><a class="dropdown-item" href="#">Diferencial</a></li>
-                                <hr class="dropdown-divider">
-                                <li><a class="dropdown-item" href="#">Bases</a></li>
-                            </ul>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contato</a>
                         </li>
@@ -65,6 +53,7 @@
         </nav>
     </header>
 
+    <!-- Sobre -->
     <section class="container mt-5 sobre" id="sobre">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-lg-6">
@@ -81,6 +70,8 @@
             </div>
         </div>
     </section>
+
+
 
 
 
