--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="container mt-3">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand logo-text" href="#">PROJETO WEB</a>
+                <a class="navbar-brand logo-text" href="#">EMPRESA</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -63,7 +63,7 @@
                 <h3 class="fw-light mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam, quam.
                 </h3>
-                <a href="#" class="btn btn-primary btn-lg">Mais informações</a>
+                <a href="#" class="btn btn-primary btn-md">Mais informações</a>
             </div>
             <div class="col-lg-6 text-center">
                 <img src="./assets/img/team-presentation-5-87.png" alt="team-presentation" class="img-fluid">
@@ -71,8 +71,47 @@
         </div>
     </section>
 
-
-
+    <!-- Valores -->
+    <section class="container my-5 bg-blue-2" id="valores">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-6 m-0 pe-0">
+                <h4 class="my-1 my-title mt-4">Valores</h4>
+                <h4 class="my-title my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente hic
+                    mollitia at! Expedita, non nesciunt!</h4>
+                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt iusto non ut odio
+                    commodi quia cumque ullam? Magnam, tempora quasi.</p>
+                <a href="" class="btn btn-primary btn-md text-light mb-5">Faça seu orçamento</a>
+            </div>
+            <div class="col-lg-6 text-center m-0 p-0">
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/img/carousel/pexels-fauxels-3182812.jpg" class="d-block w-100  img-fluid
+                                alt="Reunião de equipe">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/img/carousel/pexels-fauxels-3184339.jpg" class="d-block w-100 img-fluid
+                                alt="Reunião de equipe">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./assets/img/carousel/pexels-fauxels-3184360.jpg" class="d-block w-100 img-fluid
+                                alt="Reunião de equipe">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
