--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="#sobre">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#calores">Valores</a>
+                            <a class="nav-link" href="#valores">Valores</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#solucoes">Soluções</a>
@@ -75,8 +75,8 @@
     <section class="container my-5 bg-blue-2" id="valores">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-lg-6 m-0 pe-0">
-                <h4 class="my-1 my-title mt-4">Valores</h4>
-                <h4 class="my-title my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente hic
+                <h3 class="my-4 display-6 my-title mt-4">Valores</h3>
+                <h4 class="my-title fw-light my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente hic
                     mollitia at! Expedita, non nesciunt!</h4>
                 <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt iusto non ut odio
                     commodi quia cumque ullam? Magnam, tempora quasi.</p>
@@ -86,15 +86,15 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./assets/img/carousel/pexels-fauxels-3182812.jpg" class="d-block w-100  img-fluid
+                            <img src="./assets/img/carousel/pexels-fauxels-3182812.jpg" class="d-block w-100  img-fluid rounded-4"
                                 alt="Reunião de equipe">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/pexels-fauxels-3184339.jpg" class="d-block w-100 img-fluid
+                            <img src="./assets/img/carousel/pexels-fauxels-3184339.jpg" class="d-block w-100 img-fluid rounded-4"
                                 alt="Reunião de equipe">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/pexels-fauxels-3184360.jpg" class="d-block w-100 img-fluid
+                            <img src="./assets/img/carousel/pexels-fauxels-3184360.jpg" class="d-block w-100 img-fluid rounded-4"
                                 alt="Reunião de equipe">
                         </div>
                     </div>
