Cards de soluçao

--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-lg-6 m-0 pe-0">
                 <h3 class="my-4 display-6 my-title mt-4">Valores</h3>
-                <h4 class="my-title fw-light my-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente hic
-                    mollitia at! Expedita, non nesciunt!</h4>
-                <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt iusto non ut odio
-                    commodi quia cumque ullam? Magnam, tempora quasi.</p>
+                <h4 class="my-title fw-light my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, voluptates tempore saepe possimus et iste.</p>
                 <a href="" class="btn btn-primary btn-md text-light mb-5">Faça seu orçamento</a>
             </div>
             <div class="col-lg-6 text-center m-0 p-0">
@@ -113,8 +111,24 @@
         </div>
     </section>
 
+    <!-- Soluções -->
+    <section class="container my-5" id="solucoes">
+        <h4 class="my-title display-6 text-center mb-4">Soluções</h4>
+        <h3 class="my-title fw-light text-center mb-4">Veja oque podemos fazer para sua empresa</h3>
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-lg-4 my-2">
+                <div class="card text-center p4">
+                    <i class="fa-solid fa-user-shield icon"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Lorem, ipsum.</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                    </div>
+                </div>
+            </div>
 
-
+        </div>
+    </section>
 
 
     <!-- Bootstrap JS -->
