Finalização dos cards

--- a/index.html
+++ b/index.html
@@ -114,11 +114,61 @@
     <!-- Soluções -->
     <section class="container my-5" id="solucoes">
         <h4 class="my-title display-6 text-center mb-4">Soluções</h4>
-        <h3 class="my-title fw-light text-center mb-4">Veja oque podemos fazer para sua empresa</h3>
+        <h3 class=" fw-light text-center mb-4">Veja oque podemos fazer para sua empresa</h3>
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-lg-4 my-2">
                 <div class="card text-center p4">
                     <i class="fa-solid fa-user-shield icon"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Lorem, ipsum.</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 my-2">
+                <div class="card text-center p4">
+                    <i class="fa-solid fa-coins icon"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Lorem, ipsum.</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 my-2">
+                <div class="card text-center p4">
+                    <i class="fa-solid fa-location-dot icon"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Lorem, ipsum.</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 my-2">
+                <div class="card text-center p4">
+                    <i class="fa-solid fa-city icon"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Lorem, ipsum.</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 my-2">
+                <div class="card text-center p4">
+                    <i class="fa-solid fa-calendar-days icon"></i>
+                    <div class="card-body">
+                        <h5 class="card-title">Lorem, ipsum.</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 my-2">
+                <div class="card text-center p4">
+                    <i class="fa-solid fa-share-nodes icon"></i>
                     <div class="card-body">
                         <h5 class="card-title">Lorem, ipsum.</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
