--- a/index.html
+++ b/index.html
@@ -77,23 +77,24 @@
             <div class="col-lg-6 m-0 pe-0">
                 <h3 class="my-4 display-6 my-title mt-4">Valores</h3>
                 <h4 class="my-title fw-light my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, voluptates tempore saepe possimus et iste.</p>
+                <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, voluptates tempore saepe
+                    possimus et iste.</p>
                 <a href="" class="btn btn-primary btn-md text-light mb-5">Faça seu orçamento</a>
             </div>
             <div class="col-lg-6 text-center m-0 p-0">
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./assets/img/carousel/pexels-fauxels-3182812.jpg" class="d-block w-100  img-fluid rounded-4"
-                                alt="Reunião de equipe">
+                            <img src="./assets/img/carousel/pexels-fauxels-3182812.jpg"
+                                class="d-block w-100  img-fluid rounded-4" alt="Reunião de equipe">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/pexels-fauxels-3184339.jpg" class="d-block w-100 img-fluid rounded-4"
-                                alt="Reunião de equipe">
+                            <img src="./assets/img/carousel/pexels-fauxels-3184339.jpg"
+                                class="d-block w-100 img-fluid rounded-4" alt="Reunião de equipe">
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/carousel/pexels-fauxels-3184360.jpg" class="d-block w-100 img-fluid rounded-4"
-                                alt="Reunião de equipe">
+                            <img src="./assets/img/carousel/pexels-fauxels-3184360.jpg"
+                                class="d-block w-100 img-fluid rounded-4" alt="Reunião de equipe">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
@@ -121,8 +122,9 @@
                     <i class="fa-solid fa-user-shield icon"></i>
                     <div class="card-body">
                         <h5 class="card-title">Lorem, ipsum.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
-                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum
+                            asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -131,8 +133,9 @@
                     <i class="fa-solid fa-coins icon"></i>
                     <div class="card-body">
                         <h5 class="card-title">Lorem, ipsum.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
-                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum
+                            asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -141,8 +144,9 @@
                     <i class="fa-solid fa-location-dot icon"></i>
                     <div class="card-body">
                         <h5 class="card-title">Lorem, ipsum.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
-                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum
+                            asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -151,8 +155,9 @@
                     <i class="fa-solid fa-city icon"></i>
                     <div class="card-body">
                         <h5 class="card-title">Lorem, ipsum.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
-                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum
+                            asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -161,8 +166,9 @@
                     <i class="fa-solid fa-calendar-days icon"></i>
                     <div class="card-body">
                         <h5 class="card-title">Lorem, ipsum.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
-                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum
+                            asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
@@ -171,12 +177,34 @@
                     <i class="fa-solid fa-share-nodes icon"></i>
                     <div class="card-body">
                         <h5 class="card-title">Lorem, ipsum.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum asperiores rerum, delectus voluptas nesciunt.</p>
-                        <a href="" class="btn btn-primary">Mais informações</a>                        
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum
+                            asperiores rerum, delectus voluptas nesciunt.</p>
+                        <a href="" class="btn btn-primary">Mais informações</a>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <!-- Equipe -->
+    <section class="container my-5" id="equipe">
+        <h4 class="my-title mb-4 text-center display-6">Equipe</h4>
+        <h3 class="fw-light mb-4 text-center">Conheça nossa equipe</h3>
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-lg-3 my-2">
+                <div class="card text-center">
+                    <img src="./assets/img/equipe/pexels-emmy-e-1252107-2381069.jpg" alt="Integrante da equipe">
+                    <div class="card-body">
+                        <h4 class="my-title my-3">Fulano</h4>
+                        <p class="card-text mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                            mollitia! </p>
+                    </div>
+                    <i class="fa-brands fa-instagram icon-social mx-2"></i>
+                    <i class="fa-brands fa-linkedin-in icon-social mx-2"></i>
+                    <i class="fa-brands fa-github icon-social mx-2"></i>
+
+                </div>
+            </div>
         </div>
     </section>
 
