Finalização card equipe

--- a/index.html
+++ b/index.html
@@ -193,16 +193,17 @@
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-lg-3 my-2">
                 <div class="card text-center">
-                    <img src="./assets/img/equipe/pexels-emmy-e-1252107-2381069.jpg" alt="Integrante da equipe">
+                    <img src="./assets/img/equipe/pexels-emmy-e-1252107-2381069.jpg" alt="Integrante da equipe" class="rounded">
                     <div class="card-body">
                         <h4 class="my-title my-3">Fulano</h4>
                         <p class="card-text mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
                             mollitia! </p>
                     </div>
-                    <i class="fa-brands fa-instagram icon-social mx-2"></i>
-                    <i class="fa-brands fa-linkedin-in icon-social mx-2"></i>
-                    <i class="fa-brands fa-github icon-social mx-2"></i>
-
+                    <div class="mb-4">
+                        <i class="fa-brands fa-instagram icon-social mx-2"></i>
+                        <i class="fa-brands fa-linkedin-in icon-social mx-2"></i>
+                        <i class="fa-brands fa-github icon-social mx-2"></i>
+                    </div>
                 </div>
             </div>
         </div>
