Finalizaçaõ da equipe

--- a/index.html
+++ b/index.html
@@ -188,12 +188,61 @@
 
     <!-- Equipe -->
     <section class="container my-5" id="equipe">
-        <h4 class="my-title mb-4 text-center display-6">Equipe</h4>
+        <h4 class="my-title my-mt text-center display-6">Equipe</h4>
         <h3 class="fw-light mb-4 text-center">Conheça nossa equipe</h3>
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-lg-3 my-2">
                 <div class="card text-center">
-                    <img src="./assets/img/equipe/pexels-emmy-e-1252107-2381069.jpg" alt="Integrante da equipe" class="rounded">
+                    <img src="./assets/img/equipe/pexels-emmy-e-1252107-2381069.jpg" alt="Integrante da equipe"
+                        class="card-img-top card-image">
+                    <div class="card-body">
+                        <h4 class="my-title my-3">Fulano</h4>
+                        <p class="card-text mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                            mollitia! </p>
+                    </div>
+                    <div class="mb-4">
+                        <i class="fa-brands fa-instagram icon-social mx-2"></i>
+                        <i class="fa-brands fa-linkedin-in icon-social mx-2"></i>
+                        <i class="fa-brands fa-github icon-social mx-2"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 my-2">
+                <div class="card text-center">
+                    <img src="./assets/img/equipe/pexels-jopwell-2422278.jpg" alt="Integrante da equipe"
+                        class="card-img-top card-image">
+                    <div class="card-body">
+                        <h4 class="my-title my-3">Fulano</h4>
+                        <p class="card-text mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                            mollitia! </p>
+                    </div>
+                    <div class="mb-4">
+                        <i class="fa-brands fa-instagram icon-social mx-2"></i>
+                        <i class="fa-brands fa-linkedin-in icon-social mx-2"></i>
+                        <i class="fa-brands fa-github icon-social mx-2"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 my-2">
+                <div class="card text-center">
+                    <img src="./assets/img/equipe/pexels-linkedin-2182970.jpg" alt="Integrante da equipe"
+                        class="card-img-top card-image">
+                    <div class="card-body">
+                        <h4 class="my-title my-3">Fulano</h4>
+                        <p class="card-text mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                            mollitia! </p>
+                    </div>
+                    <div class="mb-4">
+                        <i class="fa-brands fa-instagram icon-social mx-2"></i>
+                        <i class="fa-brands fa-linkedin-in icon-social mx-2"></i>
+                        <i class="fa-brands fa-github icon-social mx-2"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 my-2">
+                <div class="card text-center">
+                    <img src="./assets/img/equipe/pexels-reneterp-2505026.jpg" alt="Integrante da equipe"
+                        class="card-img-top card-image">
                     <div class="card-body">
                         <h4 class="my-title my-3">Fulano</h4>
                         <p class="card-text mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
