--- a/index.html
+++ b/index.html
@@ -258,6 +258,47 @@
         </div>
     </section>
 
+    <!-- Contato -->
+    <section class="container-fluid bg-blue-2 mt-2" id="contato">
+        <div class="container py-5">
+            <h4 class="my-title text-center display-6">Contato</h4>
+            <h3 class="text-center fw-light mb-4">Veja como pode nos contatar</h3>
+            <div class="row mt-5">
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-lg-6 my-4 text-center">
+                            <p>
+                                <i class="fa-solid fa-map-pin icon-contato"></i>
+                            </p>
+                            <h3 class="fw-light">Endereço</h3>
+                            <p class="fw-light">Braz leme <br> Sâo Paulo - SP</p>
+                    </div>
+                        <div class="col-lg-6 my-4 text-center">
+                            <p>
+                                <i class="fa-solid fa-phone icon-contato"></i>
+                            </p>
+                            <h3 class="fw-light">Telefone</h3>
+                            <p class="fw-light">(11)9999-999<br>(11)8888-888</p>
+                    </div>
+                        <div class="col-lg-6 my-4 text-center">
+                            <p>
+                                <i class="fa-solid fa-envelope icon-contato"></i>
+                            </p>
+                            <h3 class="fw-light">Email</h3>
+                            <p class="fw-light">projetoweb@gmail.com</p>
+                    </div>
+                        <div class="col-lg-6 my-4 text-center">
+                            <p>
+                                <i class="fa-solid fa-clock icon-contato"></i>
+                            </p>
+                            <h3 class="fw-light">Horário</h3>
+                            <p class="fw-light">Segunda á Sexta<br>08:00 - 18:00</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
