--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <a class="nav-link" href="#equipe">Equipe</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contato</a>
+                            <a class="nav-link" href="#contato">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -309,7 +309,7 @@
                         </div>
                         <div class="col-lg-6 my-3">
                             <label for="telefone" class="form-label">Telefone</label>
-                            <input type="tel" class="form-control" id="telefone" placeholder="(xx)9999-999">
+                            <input type="tel" class="form-control" id="telefone" placeholder="(xx) 9999-999">
                         </div>
                         <div class="col-lg-6 my-3">
                             <label for="assunto" class="form-label">Assunto</label>
@@ -327,8 +327,7 @@
             </div>
         </div>
     </section>
-
-
+    
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
